# rts-game-rs

./: .markdownlint.json  .pre-commit-config.yaml  Cargo.toml  README.md  TODO.md
assets/config/: terrain.yaml  units.yaml
assets/config/units/: rome.yaml
building-derive/: Cargo.toml
building-derive/src/: lib.rs
docs/: bevy-shader-guide.md
spawnable-unit-derive/: Cargo.toml
spawnable-unit-derive/src/: lib.rs
src/: asset_loaders.rs  camera.rs  game_state.rs  game_states.rs  lib.rs  light.rs  main.rs  start_menu.rs  terrain.rs
src/base/: abilities.rs  mod.rs  units.rs
src/base/buildings/: components.rs  resources.rs
src/base/factions/: mod.rs
src/components/: location.rs  mod.rs  units.rs
src/config/: camera.rs  mod.rs  terrain.rs
src/factions/: mod.rs
src/factions/rome/: mod.rs
src/factions/rome/buildings/: assets.rs  factory.rs  lifecycle.rs  mod.rs  models.rs  ui.rs
src/factions/rome/units/: animations.rs  archer.rs  config.rs  factory.rs  legionary.rs  mod.rs
src/inputs/: mod.rs
src/menus/: game_selection.rs  mod.rs  start_menu.rs
src/spawns/: mod.rs
src/states/: mod.rs
src/terrain/: mod.rs
src/terrain/systems/: mod.rs  raycast.rs
src/units/: animations.rs  assets.rs  base.rs  config.rs  mod.rs  selection.rs  utils.rs
src/units/rome/: archer.rs  config.rs  factory.rs  legionary.rs  mod.rs
